--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-phone.css"media="(max-width: 499px)">
+    <link rel="stylesheet" href="style.css" media="(min-width: 500px)">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
     <title>Fur Free Retail</title>
@@ -14,6 +15,8 @@
         <div id="header-logo-motto">
             <img src="img/fur-free_retail_ukr.png" alt="Лого з зображенням лисиці" id="header-logo"/>
         </div>
+
+        <div id="menu-for-phone"><i class="fas fa-bars"></i></div>
 
         <div id="header-right">
             <nav>
@@ -36,7 +39,7 @@
     </header>
 
         <section id="main-picture">
-            <h1>ЗАЛИШ ХУТРО В МИНУЛОМУ</h1>
+            <h1>ЗАЛИШИ ХУТРО В МИНУЛОМУ</h1>
             <p>From this moment on, choose not to let your past dictate your future. What is gone is gone - forever.</p>
             <button id="learn-more-btn">
                 ДІЗНАТИСЯ БІЛЬШЕ
@@ -58,10 +61,14 @@
                         <b>Катерина Бєлкіна</b> - голова ГО "Відкриті клітки Україна"
                     </span>
                     <span>
-                        <i class="far fa-envelope"></i>
-                        contact(at)opencages.com.ua <br>
-                        <i class="fas fa-phone"></i>
-                        +38 095 563 83 80              
+                        <div>
+                            <i class="far fa-envelope"></i>
+                            contact(at)opencages.com.ua
+                        </div>
+                        <div>
+                            <i class="fas fa-phone"></i>
+                            +38 095 563 83 80
+                        </div>             
                     </span>
                 </div>
         </section>
@@ -94,27 +101,21 @@
                 </select>
             </div>
             <div id="brands-container">
-                <div class="brands-row">
+                    <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
+                    <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
+                    <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
+                    <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
+                    <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>            
                     <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
                     <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
                     <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
                     <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
                     <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
-                </div>
-                <div class="brands-row">
                     <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
                     <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
                     <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
                     <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
                     <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
-                </div>
-                <div class="brands-row">
-                    <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
-                    <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
-                    <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
-                    <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
-                    <img src="img/Rectangle-7.png" alt="Приклад-лого-бренду" class="brand-logo"/>
-                </div>
             </div>
             <div>
                 <button id="show-more">Показати більше</button>
