mobile menu added

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <div class="mobile-menu">
             <button class="mobile-menu-btn"><i class="fas fa-bars"></i></button>
             <div class="menu">
-                <nav class="header-right__nav">
-                    <a href="#about-us" class="header-right__nav__link">ПРО НАС</a>
-                    <a href="#brands" class="header-right__nav__link">БРЕНДИ</a>
-                    <a href="#why-without-fur" class="header-right__nav__link">ЧОМУ БЕЗ ХУТРА?</a>
-                    <a href="#join-us" class="header-right__nav__link">
+                <button class="menu__close-btn"><i class="fas fa-times"></i></button>
+                <nav class="menu__nav">
+                    <a href="#about-us" class="menu__nav__link">ПРО НАС</a>
+                    <a href="#brands" class="menu__nav__link">БРЕНДИ</a>
+                    <a href="#why-without-fur" class="menu__nav__link">ЧОМУ БЕЗ ХУТРА?</a>
+                    <a href="#join-us" class="menu__nav__link">
                         ПРИЄДНАТИСЯ
-                        <span class="header-right__nav__icon"><i class="fas fa-share-square"></i></span>
+                        <span class="menu__nav__icon"><i class="fas fa-share-square"></i></span>
                     </a>
                 </nav>
                 <div class="header-right__retailers">
